// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package order;

// folder in which all the generated go files will be stored
option go_package = "github.com/MatteoBollecchino/Distributed_Programming_Project/ecommerce/proto/order;order";

enum OrderStatus {
    PENDING = 0;
    PROCESSING = 1;
    SHIPPED = 2;
    DELIVERED = 3;
    CANCELED = 4;
}

// ORDER ITEM
message OrderItem{
    string item_id = 1;
    uint32 quantity = 2;
    double price = 3;
}

// ORDER
message Order {
    string order_id = 1;
    string user_id = 2;
    repeated OrderItem items = 3;
    OrderStatus status = 4;
}

// CREATE ORDER
message CreateOrderRequest {
    string username = 1;
    repeated OrderItem order_items = 2;
}

message CreateOrderResponse {
    string error_message = 1;
}

// UPDATE ORDER STATUS
message UpdateOrderStatusRequest {
    string order_id = 1;
    OrderStatus status = 2;
}

message UpdateOrderStatusResponse {
    string error_message = 1;
}

// LISTING ORDER BY USERNAME
message GetOrderRequest {
    string order_id = 1;
}

message GetOrderResponse {
    Order order = 1;
    string error_message = 2;
}

// GET ORDER TOTAL PRICE
message GetOrderPriceRequest {
    string order_id = 1;
}

message GetOrderPriceResponse {
    double total_price = 1;
    string error_message = 2;
}

// LIST ORDERS BY USER
message ListOrdersByUserRequest {
    string username = 1;
}

message ListOrdersByUserResponse {
    repeated Order orders = 1;
    string error_message = 2;
}


// SERVICES
service CartService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    rpc GetOrderPrice(GetOrderPriceRequest) returns (GetOrderPriceResponse);
    rpc ListOrdersByUser(ListOrdersByUserRequest) returns (ListOrdersByUserResponse);
}
